# arte-profiler

./: .gitignore  README.md  pyproject.toml  setup.py
data/targets/: targets_manifest.yaml
data/targets/colorchecker_passport/: ColorCheckerPassport.cht
examples/: cli_example.sh  example_usage.py  sample_api_usage.py
profiling/: profiling.py  profiling_utils.py
source/profiling/: __init__.py  profiling.py  profiling_utils.py
src/arte_profiler/: __init__.py  profiling.py  profiling_utils.py
src/arte_profiler/data/guidelines/: guidelines.yaml
src/arte_profiler/data/profiles/: profiles_manifest.yaml
src/arte_profiler/data/targets/: targets_manifest.yaml
src/arte_profiler/data/targets/DT-NGT2/: DT-NGT2.cht  DT-NGT2.cie
src/arte_profiler/data/targets/colorchecker_digital_sg/: ColorCheckerSG.cht  ColorCheckerSG_After_Nov2014.cie
src/arte_profiler/data/targets/colorchecker_passport/: ColorChecker24_After_Nov2014.cie
src/arte_profiler/tools/argyllcms_v3.3.0/linux/doc/: cal_format.html
src/arte_profiler/tools/argyllcms_v3.3.0/linux/ref/: RefMediumGamut.gam
src/arte_profiler/tools/argyllcms_v3.3.0/linux/usb/: 45-Argyll.rules  55-Argyll.rules
src/arte_profiler/tools/argyllcms_v3.3.0/macos/doc/: Scenarios.html
src/arte_profiler/tools/argyllcms_v3.3.0/macos/ref/: linear.cal
src/arte_profiler/tools/argyllcms_v3.3.0/windows/: log.txt
src/arte_profiler/tools/argyllcms_v3.3.0/windows/doc/: targen.html
src/arte_profiler/tools/argyllcms_v3.3.0/windows/ref/: RefMediumGamut.gam  linear.cal  strange.cal
src/arte_profiler/tools/argyllcms_v3.3.0/windows/usb/: ArgyllCMS.cat  ArgyllCMS.inf
tools/argyllcms_v3.3.0/linux/doc/: ArgyllDoc.html  chartread.html
tools/argyllcms_v3.3.0/linux/ref/: linear.cal  strange.cal
tools/argyllcms_v3.3.0/macos/doc/: dispcal.html  instruments.html
tools/argyllcms_v3.3.0/macos/ref/: RefMediumGamut.gam  strange.cal
tools/argyllcms_v3.3.0/windows/: Readme.txt
tools/argyllcms_v3.3.0/windows/doc/: Environment.html
tools/argyllcms_v3.3.0/windows/usb/: ArgyllCMS_x64.cat
