[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arte-profiler"
version = "0.1"
description = "A Python tool for building ICC profiles and evaluating color accuracy."
authors = [
    { name = "Alessandra Marrocchesi", email = "marrocchesialessandra@gmail.com" },
    { name = "Robert G. Erdmann", email = "robert.g.erdmann@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colour-science>=0.4, <0.5",
    "matplotlib>=3.7, <4.0",
    "numpy>=1.22, <2.0",
    "opencv-python>=4.8, <5.0",
    "pandas>=1.4, <2.0",
    "pyvips>=2.2, <3.0",
    "pyyaml>=6.0, <7.0",
    "reportlab>=4.2, <5.0",
    "seaborn>=0.13, <0.14",
    "shapely>=2.0, <3.0",
]

[tool.setuptools.package-dir]
"" = "source"

[tool.setuptools.packages.find]
where = ["source"]

[project.scripts]
arte-profiler = "profiling.profiling:main"