[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arte-profiler"
version = "0.1"
description = "A Python tool for building ICC profiles and evaluating color accuracy."
authors = [
    { name = "Alessandra Marrocchesi", email = "marrocchesialessandra@gmail.com" },
    { name = "Robert G. Erdmann", email = "robert.g.erdmann@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8, <3.10"
dependencies = [
    "colour-science>=0.4",
    "matplotlib>=3.7",
    "numpy>=1.22",
    "opencv-python>=4.8, <4.10",
    "pandas>=2.0",
    "pyvips>=2.2",
    "pyyaml>=6.0",
    "reportlab>=4.2",
    "seaborn>=0.13",
    "shapely>=2.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arte_profiler" = [
    "data/targets/**/*",
    "data/profiles/**/*",
    "tools/argyllcms_v3.3.0/**/*",
    "tools/dejavu-sans_font/*",
]

[project.scripts]
arte-profiler = "arte_profiler.profiling:main"